--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,4 +11,15 @@
       @apply text-white border bg-indigo-600 border-indigo-600
       hover:bg-transparent hover:text-indigo-600 rounded-md
     }
+    
+    .section-1 {
+      @apply bg-white dark:bg-gray-900
+    }
+
+    .section-2 {
+      @apply bg-gray-50 dark:bg-gray-800
+    }
+    .section-3 {
+      @apply bg-gray-100 dark:bg-gray-700
+    }
   }
